Refactor error handling: simplify catch blocks by removing error variable and improve toast messaging